ribbon 负载均衡和ribbon 属性配置分析完毕

--- a/hello-service-2/src/main/resources/application.properties
+++ b/hello-service-2/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=hello-service-1
-#spring.profiles.active=@profileActive@
-spring.profiles.active=region-zone
+spring.profiles.active=@profileActive@
+#spring.profiles.active=region-zone
 
 #eureka \u72B6\u6001\u9875\u9762\u5730\u5740\uFF0C\u9ED8\u8BA4 /info
 eureka.instance.status-page-url-path=/swagger-ui.html
