--- a/ribbon-service-1/src/main/resources/application-dev.properties
+++ b/ribbon-service-1/src/main/resources/application-dev.properties
@@ -19,8 +19,27 @@ eureka.instance.instance-id=${spring.application.name}:${spring.cloud.client.ipA
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:1111/eureka/
 
 
+#\u77ED\u8DEF\u5668\u8D85\u65F6\u65F6\u95F4\u8981\u5927\u4E8E ribbon \u7684\u8D85\u65F6\u65F6\u95F4\uFF0C\u5426\u5219\u4E0D\u4F1A\u89E6\u53D1\u91CD\u8BD5
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=6000
+        
+
+#\u5F00\u542F\u91CD\u8BD5\u673A\u5236
+spring.cloud.loadbalancer.retry.enabled=true
+#\u662F\u5426\u6240\u6709\u64CD\u4F5C\u90FD\u8FDB\u884C\u91CD\u8BD5
+HELLO-SERVICE-1.ribbon.OkToRetryOnAllOperations=true
+#\u5207\u6362\u5B9E\u4F8B\u7684\u91CD\u8BD5\u6B21\u6570 \u91CD\u8BD5\u5176\u4ED6\u5B9E\u4F8B\u7684\u6700\u5927\u91CD\u8BD5\u6B21\u6570\uFF0C\u4E0D\u5305\u62EC\u9996\u6B21\u6240\u9009\u7684 server
+HELLO-SERVICE-1.ribbon.MaxAutoRetriesNextServer=2
+#\u5BF9\u5F53\u524D\u5B9E\u4F8B\u7684\u91CD\u8BD5\u6B21\u6570 \u540C\u4E00\u5B9E\u4F8B\u6700\u5927\u91CD\u8BD5\u6B21\u6570\uFF0C\u4E0D\u5305\u62EC\u9996\u6B21\u8C03\u7528
+HELLO-SERVICE-1.ribbon.MaxAutoRetries=4
+
+#\u8BF7\u6C42\u8FDE\u63A5\u7684\u8D85\u65F6\u65F6\u95F4  http \u5EFA\u7ACB socket \u8D85\u65F6\u65F6\u95F4
+HELLO-SERVICE-1.ribbon.ConnectTimeout=250
+#\u8BF7\u6C42\u5904\u7406\u7684\u8D85\u65F6\u65F6\u95F4  http \u8BFB\u53D6\u54CD\u5E94 socket \u8D85\u65F6\u65F6\u95F4
+HELLO-SERVICE-1.ribbon.ReadTimeout=1000
+        
 
 
 logging.level.org.springframework.cloud=debug
 logging.level.com.netflix.loadbalancer=debug
 logging.level.org.springframework.web.client=debug
+logging.level.org.springframework.retry=debug
