--- a/ribbon-service-1/pom.xml
+++ b/ribbon-service-1/pom.xml
@@ -33,7 +33,7 @@
         </dependency>
 
 
-        <!--短路器 start-->
+        <!-- 断路器 start-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-hystrix</artifactId>
@@ -45,11 +45,11 @@
         </dependency>
 
         <!--重试-->
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.retry</groupId>-->
-            <!--<artifactId>spring-retry</artifactId>-->
-            <!--<version>1.2.2.RELEASE</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+            <version>1.2.2.RELEASE</version>
+        </dependency>
 
         <!--okhttp-->
         <!--<dependency>-->
