feign 学习记录完毕

--- a/feign-service-1/src/main/resources/application-dev.properties
+++ b/feign-service-1/src/main/resources/application-dev.properties
@@ -21,14 +21,16 @@ eureka.client.serviceUrl.defaultZone=http://127.0.0.1:1111/eureka/
 eureka.instance.instance-id=${spring.application.name}:${spring.cloud.client.ipAddress}:${server.port}
 
 
-# hystrix \u7194\u65AD\u8D85\u65F6\u65F6\u95F4
+# \u8BBE\u7F6E\u5168\u5C40\u7684\u8D85\u65F6\u65F6\u95F4 hystrix \u7194\u65AD\u8D85\u65F6\u65F6\u95F4
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=8000
 
 
-hystrix.command.timeout.execution.isolation.thread.timeoutInMilliseconds=1000
 
+
+## \u5BF9\u670D\u52A1\u7684\u76F8\u5173\u914D\u7F6E
 HELLO-SERVICE-1.ribbon.ConnectTimeout=2000
 HELLO-SERVICE-1.ribbon.ReadTimeout=2000
+
 # \u5BF9\u6240\u6709\u64CD\u4F5C\u8BF7\u6C42\u90FD\u8FDB\u884C\u91CD\u8BD5
 HELLO-SERVICE-1.ribbon.OkToRetryOnAllOperations=true
 
@@ -41,6 +43,8 @@ HELLO-SERVICE-1.ribbon.OkToRetryOnAllOperations=true
 # \u4E0D\u5305\u62EC\u9996\u6B21 \u5F53\u53EA\u6709\u8FD9\u4E2A\u914D\u7F6E\u9879\u65F6\uFF0C\u5F53\u8BFB\u53D6\u5931\u8D25\u65F6\uFF0CHELLO-SERVICE-1 \u7684\u670D\u52A1\u6253\u5370 4 \u6761\u65E5\u5FD7\uFF0C
 # \u56E0\u4E3A MaxAutoRetriesNextServer \u9ED8\u8BA4\u4E3A 1\uFF0C\u8BF4\u660E \u5171\u5207\u6362\u5B9E\u4F8B 2\u6B21\uFF0CMaxAutoRetries \u4E3A 1,\u5219 \u6BCF\u6B21\u5BF9\u5F53\u524D\u5B9E\u4F8B\u91CD\u8BD5 \u9996\u6B21+1=2 \u6240\u4EE5\u5171 2*2 =4 \u6761\u65E5\u5FD7
 HELLO-SERVICE-1.ribbon.MaxAutoRetries=1
+
+
 
 
 
